# hexagonal-ddd-in-python

./: Makefile  README.md  main.py  pyproject.toml
adapters/: api_thermostat_adapter.py  uart_thermostat_adapter.py
controllers/: thermostat_controller.py
controllers/tests/: test_thermostat_controller.py
core/domain/entities/: thermostat.py
core/domain/value_objects/: temperature.py  temperature_scala.py  thermostat_port_type.py
core/domain/value_objects/tests/: test_temperature.py
core/ports/: temperature_control_port.py  thermostat_port.py  thermostat_repository.py
core/repositories/: local_thermostat_repository.py
core/services/: temperature_control_service.py
core/services/tests/: test_temperature_control_service.py
