[project]
name = "hexagonal-ddd-in-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = "."